# bible_study_app_v2

./: .gitignore  README.md
docs/: changelog.html  index.html  styles.css  tutorial.html
info/: bugs.md  goal.md  ideas.md  markdown-standard.md  notes.md  plan.md  recommendations.md  references.md  roadmap.md
src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
src-tauri/capabilities/: migrated.json
src-tauri/crates/bible-gen/: Cargo.toml
src-tauri/crates/bible-gen/src/: bible.rs  main.rs  printing.rs
src-tauri/crates/cloud_sync/: Cargo.toml
src-tauri/crates/cloud_sync/src/: auth.rs  drive.rs  exchange.rs  lib.rs  utils.rs
src-tauri/crates/md-parser/: Cargo.toml
src-tauri/crates/md-parser/src/: ast.rs  lib.rs  parser.rs  reader.rs
src-tauri/crates/test_runner/: Cargo.toml
src-tauri/crates/test_runner/res/: auth.html  cancelled.html
src-tauri/crates/test_runner/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: small_asv.txt  small_bbe.txt  small_kjv.txt
src-tauri/resources/bibles/: small_asv.txt  small_bbe.txt  small_kjv.txt  small_sparv.txt  small_ylt.txt
src-tauri/resources/reading_plans/: chron.json  rr.xml
src-tauri/resources/tts-data/espeak-ng-data/: cmn_dict  ru_dict
src-tauri/src/: app_state.rs  audio.rs  bible.rs  bible_parsing.rs  cloud_sync.rs  commands.rs  main.rs  migration.rs  notes.rs  parsing.rs  prompt.rs  readings.rs  save_data.rs  search_parsing.rs  searching.rs  settings.rs  utils.rs
src-tauri/src/audio/: mod.rs  player.rs  text_to_speech.rs
src-tauri/src/audio/tts/: bible_reader.rs  events.rs  mod.rs  player_thread.rs  reader_behavior.rs  synth.rs
src-tauri/src/cloud_sync/: mod.rs  sync_state.rs
src-tauri/src/migration/: mod.rs  remote_update_migration.rs
src-tauri/src/notes/: action.rs  mod.rs  test.rs
src-tauri/src/utils/: color.rs  macros.rs  mod.rs
ui/: bible_page.html  coloris_test.html  highlight_editor.html  home.html  index.html  search_page.html  styles.css  test.html  tsconfig.json
(+173 files in other folders)
