[package]
name = "app"
version = "0.5.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[workspace]
members = ["crates/bible-gen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
itertools = "0.14.0"
regex = "1.9.6"
html-builder = "0.5.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
lazy_static = "1.5.0"
serde_with = "3.0.0"
tauri-plugin-fs = "2"
kira = "0.10.0"
minidom = "0.16.0"
open = "3.2.0"
tts = { version = "0.26.3" }
env_logger = "0.10.2"
piper-rs = "0.1.9"
float-lerp = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
