[package]
name = "test_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.9"
webbrowser = "0.8"
base64 = "0.21"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
cloud_sync = { path = "../cloud_sync" }
